--- a/index.html
+++ b/index.html
@@ -1,5 +1,235 @@
-<html>
-<title>baptizement</title>
-<p1>lol</p1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <link rel="icon" href="images/b.ico" type="image/x-icon">
+
+  <style>
+    * {
+      cursor: none; 
+    }
+
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: Arial, sans-serif;
+      color: white;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: flex-start;
+      min-height: 100vh;
+      background: url("https://78.media.tumblr.com/d146905f9284e3c43c565696cf0c4704/tumblr_p8tcofETh11ugk8y1o1_1280.gif") no-repeat center center fixed;
+      background-size: cover;
+      overflow: hidden;
+    }
+
+    #enter-screen {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: black;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      z-index: 1000;
+      transition: opacity 0.6s ease;
+    }
+
+    #enter-screen.hidden {
+      opacity: 0;
+      pointer-events: none;
+    }
+
+    .floating {
+      animation: float 4s ease-in-out infinite;
+      box-shadow: 0 0 20px white;
+      transition: transform 0.3s ease;
+    }
+
+    .floating-text {
+      animation: float 4s ease-in-out infinite;
+      text-shadow: 0 0 10px white;
+      transition: transform 0.3s ease;
+    }
+
+    @keyframes float {
+      0% { transform: translateY(0); }
+      50% { transform: translateY(-15px); }
+      100% { transform: translateY(0); }
+    }
+
+    .profile-header {
+      margin-top: 40px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      z-index: 1;
+    }
+
+    .profile-header img {
+      width: 200px;
+      height: 200px;
+      object-fit: cover;
+      border-radius: 12px;
+      border: 2px solid white;
+    }
+
+    .profile-header h1 {
+      margin: 10px 0 5px;
+    }
+
+    .profile-header p {
+      max-width: 500px;
+      text-align: center;
+      line-height: 1.5;
+    }
+
+    .links {
+      display: flex;
+      gap: 15px;
+      margin-top: 20px;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+
+    .links a {
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      padding: 6px;
+      transition: transform 0.2s ease;
+    }
+
+    .links a img {
+      height: 42px;
+      width: auto;
+      box-shadow: 0 0 15px white;
+      border-radius: 8px;
+    }
+
+    .links a:hover {
+      transform: scale(1.1);
+    }
+
+    audio {
+      display: none;
+    }
+
+    /* Snow particles container */
+    #snow-trail {
+      position: fixed;
+      top: 0;
+      left: 0;
+      pointer-events: none;
+      width: 100%;
+      height: 100%;
+      z-index: 0;
+    }
+
+    .snowflake {
+      position: absolute;
+      width: 6px;
+      height: 6px;
+      background: white;
+      border-radius: 50%;
+      opacity: 0.9;
+      filter: blur(1px);
+      animation: fall 2s linear forwards;
+    }
+
+    @keyframes fall {
+      to {
+        transform: translateY(80px);
+        opacity: 0;
+      }
+    }
+  </style>
+</head>
+<body>
+
+<audio id="bg-music" loop>
+  <source src="luci.mp3" type="audio/mpeg">
+</audio>
+
+<!-- Enter screen -->
+<div id="enter-screen">
+  <h2 class="floating-text">Click to Enter</h2>
+</div>
+
+<!-- Snow container -->
+<div id="snow-trail"></div>
+
+<!-- Profile content -->
+<div class="profile-header" style="display:none;" id="profile-content">
+  <img src="../images/lucifer.jpg" alt="Mr. Lucifer" class="floating interactive">
+  <h1 class="floating-text">@2n9Lucifer</h1>
+  <p class="floating-text">Co Owner / Developer</p>
+  <p class="floating-text">Lucifer is always watching he knows everything.</p>
+
+  <div class="links">
+    <a href="https://discord.gg/12am" target="_blank">
+      <img src="../images/icons8-discord-500.png" alt="Discord" class="floating interactive">
+    </a>
+    <a href="https://t.me/pzrot" target="_blank">
+      <img src="../images/icons8-telegram-logo-500.png" alt="Telegram" class="floating interactive">
+    </a>
+    <a href="https://doxbin.net/user/forskins" target="_blank">
+      <img src="../images/red_doxbin_kyrr.png" alt="Doxbin" class="floating interactive">
+    </a>
+  </div>
+</div>
+
+<script>
   
+  const titles = ["@", "@2", "@2n", "@2n9", "@2n9L", "@2n9Lu", "@2n9Luc", "@2n9Luci", "@2n9Lucif", "@2n9Lucife", "@2n9Lucifer", "@2n9Lucife", "@2n9Lucif", "@2n9Luci", "@2n9Luc", "@2n9Lu", "@2n9L", "@2n9", "@2n", "@2", "@"];
+  let currentTitleIndex = 0;
+  setInterval(() => {
+    document.title = titles[currentTitleIndex];
+    currentTitleIndex = (currentTitleIndex + 1) % titles.length;
+  }, 400);
+
+  const enterScreen = document.getElementById("enter-screen");
+  const profileContent = document.getElementById("profile-content");
+  const audio = document.getElementById("bg-music");
+
+  enterScreen.addEventListener("click", () => {
+    enterScreen.classList.add("hidden");
+    setTimeout(() => {
+      enterScreen.style.display = "none";
+      profileContent.style.display = "flex";
+    }, 600);
+    audio.play().catch(err => console.log("Autoplay blocked:", err));
+  });
+
+
+  document.addEventListener("mousemove", (e) => {
+    const interactiveElements = document.querySelectorAll(".interactive");
+    interactiveElements.forEach(el => {
+      const rect = el.getBoundingClientRect();
+      const centerX = rect.left + rect.width / 2;
+      const offset = (e.clientX - centerX) / 30;
+      el.style.transform = `translateX(${offset}px)`;
+    });
+  });
+
+
+  const snowTrail = document.getElementById("snow-trail");
+
+  document.addEventListener("mousemove", function(e) {
+    const snowflake = document.createElement("div");
+    snowflake.className = "snowflake";
+    snowflake.style.left = e.pageX + 'px';
+    snowflake.style.top = e.pageY + 'px';
+    snowTrail.appendChild(snowflake);
+
+    setTimeout(() => snowflake.remove(), 2000);
+  });
+</script>
+
+</body>
 </html>
