--- a/index.html
+++ b/index.html
@@ -166,20 +166,20 @@
 
 <!-- Profile content -->
 <div class="profile-header" style="display:none;" id="profile-content">
-  <img src="../images/lucifer.jpg" alt="Mr. Lucifer" class="floating interactive">
+  <img src="lucifer.jpg" alt="Mr. Lucifer" class="floating interactive">
   <h1 class="floating-text">@2n9Lucifer</h1>
   <p class="floating-text">Co Owner / Developer</p>
   <p class="floating-text">Lucifer is always watching he knows everything.</p>
 
   <div class="links">
     <a href="https://discord.gg/12am" target="_blank">
-      <img src="../images/icons8-discord-500.png" alt="Discord" class="floating interactive">
+      <img src="images/icons8-discord-500.png" alt="Discord" class="floating interactive">
     </a>
     <a href="https://t.me/pzrot" target="_blank">
-      <img src="../images/icons8-telegram-logo-500.png" alt="Telegram" class="floating interactive">
+      <img src="images/icons8-telegram-logo-500.png" alt="Telegram" class="floating interactive">
     </a>
     <a href="https://doxbin.net/user/forskins" target="_blank">
-      <img src="../images/red_doxbin_kyrr.png" alt="Doxbin" class="floating interactive">
+      <img src="images/red_doxbin_kyrr.png" alt="Doxbin" class="floating interactive">
     </a>
   </div>
 </div>
