--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 
 <script>
   
-  const titles = ["@", "@2", "@2n", "@2n9", "@2n9L", "@2n9Lu", "@2n9Luc", "@2n9Luci", "@2n9Lucif", "@2n9Lucife", "@2n9Lucifer", "@2n9Lucife", "@2n9Lucif", "@2n9Luci", "@2n9Luc", "@2n9Lu", "@2n9L", "@2n9", "@2n", "@2", "@"];
+  const titles = ["b", "ba", "bap", "bapt", "bapti", "baptiz", "baptize", "baptizem", "baptizemen", "baptizement", "baptizemen", "baptizeme", "baptizem", "baptize", "baptiz", "bapti", "bapt", "bap", "ba", "b" ];
   let currentTitleIndex = 0;
   setInterval(() => {
     document.title = titles[currentTitleIndex];
