--- a/index.html
+++ b/index.html
@@ -167,18 +167,18 @@
 <!-- Profile content -->
 <div class="profile-header" style="display:none;" id="profile-content">
   <img src="Images/lucifer.jpg" alt="Mr. Lucifer" class="floating interactive">
-  <h1 class="floating-text">@2n9Lucifer</h1>
+  <h1 class="floating-text">baptizement</h1>
   <p class="floating-text">Founder/ Owner Of Baptizement </p>
   <p class="floating-text">always watching</p>
 
   <div class="links">
-    <a href="https://discord.gg/12am" target="_blank">
+    <a href="https://discord.gg/had" target="_blank">
       <img src="Images/icons8-discord-500.png" alt="Discord" class="floating interactive">
     </a>
-    <a href="https://t.me/pzrot" target="_blank">
+    <a href="https://t.me/dooringyou" target="_blank">
       <img src="Images/icons8-telegram-logo-500.png" alt="Telegram" class="floating interactive">
     </a>
-    <a href="https://doxbin.net/user/forskins" target="_blank">
+    <a href="https://rarbin.com/user/hoa" target="_blank">
       <img src="Images/red_doxbin_kyrr.png" alt="Doxbin" class="floating interactive">
     </a>
   </div>
