--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 
 <!-- Profile content -->
 <div class="profile-header" style="display:none;" id="profile-content">
-  <img src="Images/lucifer.jpg" alt="Mr. Lucifer" class="floating interactive">
+  <img src="Images/lucifer.png" alt="Mr. Lucifer" class="floating interactive">
   <h1 class="floating-text">baptizement</h1>
   <p class="floating-text">Founder/ Owner Of Baptizement </p>
   <p class="floating-text">always watching</p>
