--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 <body>
 
 <audio id="bg-music" loop>
-  <source src="luci.mp3" type="audio/mpeg">
+  <source src="ba.mp3" type="audio/mpeg">
 </audio>
 
 <!-- Enter screen -->
